# realoption

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  REPORT.md  main.py  pyproject.toml  requirements.txt
config/: settings.yaml
results/business/: metals_prices.csv
results/buyperp/: sofr_rate.csv  year1_purchase_option.ipynb  year1_purchase_option.py
results/sellperp/: year1_sell_option.ipynb  year1_sell_option.py
src/data_collection/: ecb_fx.py  fred_rates.py  pipeline.py  westmetall.py
src/real_options/: bermudan_purchase.py  swing_sell.py
src/utils/: paths.py
tests/: test_bermudan_purchase.py  test_ecb_fx.py  test_fred_rates.py  test_pipeline.py  test_swing_sell.py  test_westmetall.py
