[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realoption"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
# Only src/ is a real package; results/, data/, tests/ etc. are not meant to
# be importable modules, so they're excluded rather than auto-discovered.
include = ["src*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["."]
